Fix H1 Header Overlap

--- a/dev/scss/00_critical-inline.scss
+++ b/dev/scss/00_critical-inline.scss
@@ -86,7 +86,7 @@ body {
   position: fixed;
   transform: translateX(-50%);
   width: 100vw;
-  z-index: 1;
+  z-index: 3;
 
   .inner-wrapper {
     align-items: stretch;
